[package]
name = "imgui-wgpu"
version = "0.7.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>", "Steven Wittens <steven@acko.net>"]
edition = "2018"
description = "A wgpu render backend for imgui-rs."
documentation = "https://docs.rs/imgui-wgpu/"
homepage = "https://github.com/Yatekii/imgui-wgpu-rs"
repository = "https://github.com/Yatekii/imgui-wgpu-rs"
readme = "README.md"
categories = ["gui", "graphics", "rendering", "rendering::graphics-api"]
keywords = ["gui", "graphics", "wgpu", "imgui"]
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev = "ffa9199402e1436ba525007754e161b08ab12bcc" }
glsl-to-spirv = { version = "0.1", optional = true }
log = "0.4"
imgui = "0.4"

[dev-dependencies]
winit = "0.22"
raw-window-handle = "0.3"
env_logger = "0.7"
image = "0.23"
futures = "0.3"

[dev-dependencies.imgui-winit-support]
version = "0.4"
default-features = false
features = ["winit-22"]

[package.metadata.docs.rs]
all-features = true

# [patch.crates-io]
# wgpu = { version = "0.4", git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "7b15e24" }
